--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -191,37 +191,10 @@ jobs:
           name: ${{ env.PARTNER_CHAINS_NODE_AARCH64_APPLE_DARWIN }}
           path: ${{ env.PARTNER_CHAINS_NODE_AARCH64_APPLE_DARWIN }}
 
-  partner-chains-smart-contracts-x86_64-linux:
-    runs-on: [self-hosted, nixos]
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ inputs.partner_chains_smart_contracts_sha }}
-
-      - name: Build
-        run: nix build ./#sidechain-release-bundle
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: partner-chains-smart-contracts-x86_64-linux
-          path: result/release.zip
-
-  partner-chains-smart-contracts-process:
-    runs-on: ubuntu-latest
-    needs: [partner-chains-smart-contracts-x86_64-linux]
-    steps:
-      - name: Download x86_64-linux artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: partner-chains-smart-contracts-x86_64-linux
-          path: ./x86_64-linux
-
-      - name: Unzip release.zip
-        run: |
-          mkdir -p ./x86_64-linux/unzipped
-          unzip ./x86_64-linux/release.zip -d ./x86_64-linux/unzipped
+  partner-chains-smart-contracts:
+    uses: ./.github/workflows/modules/build-pcsc-artifact.yml
+    with:
+      sha: #TODO
 
   local-environment-tests:          
     needs: [partner-chains-linux, partner-chains-smart-contracts-process]
