--- a/.github/workflows/modules/local-environment-tests.yml
+++ b/.github/workflows/modules/local-environment-tests.yml
@@ -7,7 +7,7 @@ on:
         description: "Node Image"
         required: true
       tag:
-        description: "Artifact Tag"
+        description: "PC Artifact Tag"
         required: true
 
 jobs:
