--- a/.github/workflows/modules/release-pc-artifact.yml
+++ b/.github/workflows/modules/release-pc-artifact.yml
@@ -43,37 +43,37 @@ jobs:
       - name: Download Linux CLI artifact
         uses: actions/download-artifact@v4
         with:
-          name: ${{ env.PARTNER_CHAINS_CLI_X86_64_LINUX }}
+          name: partner-chains-cli-x86_64-linux-artifact-artifact
           path: artifact-linux/
   
       - name: Download Linux NODE artifact
         uses: actions/download-artifact@v4
         with:
-          name: ${{ env.PARTNER_CHAINS_NODE_X86_64_LINUX }}
+          name: partner-chains-node-x86_64-linux-artifact-artifact
           path: artifact-linux/
   
       - name: Download macOS x86_64 CLI artifact
         uses: actions/download-artifact@v4
         with:
-          name: ${{ env.PARTNER_CHAINS_CLI_X86_64_APPLE_DARWIN }}
+          name: partner-chains-cli-x86_64-apple-darwin-artifact
           path: artifact-macos-x86_64/
   
       - name: Download macOS x86_64 NODE artifact
         uses: actions/download-artifact@v4
         with:
-          name: ${{ env.PARTNER_CHAINS_NODE_X86_64_APPLE_DARWIN }}
+          name: partner-chains-node-x86_64-apple-darwin-artifact
           path: artifact-macos-x86_64/
   
       - name: Download macOS ARM64 CLI artifact
         uses: actions/download-artifact@v4
         with:
-          name: ${{ env.PARTNER_CHAINS_CLI_AARCH64_APPLE_DARWIN }}
+          name: partner-chains-cli-aarch64-apple-darwin-artifact
           path: artifact-macos-arm64/
   
       - name: Download macOS ARM64 NODE artifact
         uses: actions/download-artifact@v4
         with:
-          name: ${{ env.PARTNER_CHAINS_NODE_AARCH64_APPLE_DARWIN }}
+          name: partner-chains-node-aarch64-apple-darwin-artifact
           path: artifact-macos-arm64/
   
       - name: Check if release already exists
